--- a/src/main/webapp/html/course-base.html
+++ b/src/main/webapp/html/course-base.html
@@ -103,7 +103,7 @@
                         id="auto-id-1507098444835">
                         <a class="f-thide f-fc3" href="student-experiment">实验</a>
                     </li>
-                 	<li class="u-greentab j-tabitem f-f0 " data-name="测验与作业" data-type="4" data-id="1002347046"
+                 	<!--<li class="u-greentab j-tabitem f-f0 " data-name="测验与作业" data-type="4" data-id="1002347046"
                         id="auto-id-1507098444833">
                         <a class="f-thide f-fc3" href="student-homework">测验与作业</a>
                     </li>
@@ -111,7 +111,7 @@
                         id="auto-id-1507098444834">
                         <a class="f-thide f-fc3" href="#">考试</a>
                     </li>
-                    
+                    -->
                 </ul>
             </div>
         </div>
