--- a/src/main/webapp/html/teacher-course-base.html
+++ b/src/main/webapp/html/teacher-course-base.html
@@ -111,14 +111,14 @@
                         id="auto-id-1507098444835">
                         <a class="f-thide f-fc3" href="teacher-experiment">实验管理</a>
                     </li>
-                    <li class="u-greentab j-tabitem f-f0 " data-name="测验与作业" data-type="4" data-id="1002347046"
+                    <!-- <li class="u-greentab j-tabitem f-f0 " data-name="测验与作业" data-type="4" data-id="1002347046"
                         id="auto-id-1507098444833">
                         <a class="f-thide f-fc3" href="javascript:;">作业管理</a>
                     </li>
                     <li class="u-greentab j-tabitem f-f0 " data-name="考试" data-type="6" data-id="1002347047"
                         id="auto-id-1507098444834">
                         <a class="f-thide f-fc3" href="javascript:;">考试管理</a>
-                    </li>
+                    </li> -->
                     <li class="u-greentab j-tabitem f-f0 " data-name="学生成绩管理" data-type="6" data-id="1002347047">
                         <a class="f-thide f-fc3" href="teacher-grade-manager">学生成绩管理</a>
                     </li>
